# agentic-ai-workshop

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  diagram.md  pyproject.toml  schema.py  test_api.py  test_review_transactions.py  trigger_agent_review.sh
agent/: README.md  __init__.py  config.py  decision_engine.py  langchain_agent.py  main.py  ml_client.py  models.py  test_agent.py
agent/tools/: __init__.py  fraud_review_tool.py
api/: main.py  models.py  predictor.py
data/: generate_synthetic_data.py  patterns.py
model/: example_ml_pipeline.py  preprocessing.py  train_and_save.py
model/artifacts/: fraud_model.joblib  metadata.json  preprocessor.joblib
