[project]
name = "abuse-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.1.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.40.0",
]
